# pyQuTree

./: .gitignore  .readthedocs.yml  Coulomb.ipynb  DOCUMENTATION_SETUP.md  LICENSE  README.md  TTdiag.ipynb  environment.yml  equidistant_grid.ipynb  grid.ipynb  internal_coordinates.ipynb  jacobian.ipynb  kinetic_energy.ipynb  license.txt  methyl.ipynb  pyproject.toml  setup.py  ttnopt.ipynb
.github/workflows/: tests.yml
docs/: .gitignore  README.md  conf.py  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/api/: index.rst
docs/usage/: convenience_interface.rst  tree_structures.rst  ttnopt.rst
examples/: benchmarks.py  convenience_example.py  diag.ipynb  grid.ipynb  h4.ipynb  kinetic_energy.ipynb  matrix_completion.ipynb  optimization_example.ipynb  optimization_networks.ipynb  tensor_rank_cross.ipynb  trc_mt_ttopt_opt.py  ttnopt.ipynb  ttopt_example.ipynb
examples/benchmarking/: benchmark.py  functions.py  helpers.py  plotting.py  runner.py
paper/: paper.md
qutree/: __init__.py  benchmark_functions.py  compress.py  convenience.py  grids.py  gto.py  internal_coordinates.py  matrix.py  matrix_completion.py  optimization.py  plot.py  random_projection.py  sop.py  tensortrain.py
qutree/chem/: geometry.py  xtb_interface.py
qutree/matrix_factorizations/: __init__.py  maxvol.py  simul_diag.py  simultaneous_diagonalization.py
qutree/ttn/: TTNopt.py  grid.py  network.py  tensor.py  tensor_network.py  ttnopt.py
tests/: test_convenience.py  test_matrix.py  test_network.py  test_random_projection.py  test_simultaneous_diagonalization.py  test_sop.py  test_tensor.py  test_tensor_network.py  test_tensortrain.py  test_ttnopt_examples.py
