[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyqutree"
version = "0.1.2"
description = "QuTree: A tree tensor network package"
authors = ["Roman Ellerbrock <romanellerbrock@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["tensor network", "chemistry", "optimization", "cross approximation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
packages = [{include = "qutree"}]

[tool.poetry.urls]
"Homepage" = "https://github.com/roman-ellerbrock/pyqutree"
"Repository" = "https://github.com/roman-ellerbrock/pyqutree"
"Bug Tracker" = "https://github.com/roman-ellerbrock/pyqutree/issues"
"Documentation" = "https://github.com/roman-ellerbrock/pyqutree"
"Paper" = "https://doi.org/10.1063/5.0180233"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.20"
networkx = "^2.6"
matplotlib = "^3.5"
plotly = "^5.0"
scipy = "^1.7"
pandas = "^1.3"
imageio = "^2.9"
pydot = "^4.0.1"
pyscf = "^2.9.0"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pre-commit = "^3.0"
ipython = "^8.0"
nbformat = "^5.0"
